--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,24 @@
 
 # Virtual environment
 .venv/
+venv/
 
 # Python cache
 __pycache__/
 *.pyc
+*.pyo
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Database
+*.db
+*.sqlite3
+
+# Logs
+*.log
